--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>imu_tools</name>
+  <name>imu_utils</name>
   <version>0.1.0</version>
-  <description>The imu_tools package</description>
+  <description>The imu_utils package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/imu_tools</url> -->
+  <!-- <url type="website">http://wiki.ros.org/imu_utils</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
