--- a/package.xml
+++ b/package.xml
@@ -50,7 +50,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-
+  <build_depend>code_utils</build_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
