Fixed code_util dependency in package.xml + include fstream.h in src/imu_an.cpp

--- a/package.xml
+++ b/package.xml
@@ -50,6 +50,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>code_utils</buildtool_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
